Assn5/ass5_19CS10069_19CS30007.output
Terminals unused in grammar

    TYPEDEF
    STRING_LITERAL
    ENUMERATION_CONST


Grammar

    0 $accept: translation_unit $end

    1 changetable: %empty

    2 constant: INTEGER_CONST
    3         | FLOAT_CONST
    4         | CHAR_CONST

    5 primary_expression: IDENTIFIER
    6                   | constant
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' argument_expression_list_opt ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | '(' type_name ')' '{' initializer_list '}'
   16                   | '(' type_name ')' '{' initializer_list ',' '}'

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 argument_expression_list_opt: argument_expression_list
   20                             | %empty

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: BITWISE_AND
   28               | MULT
   29               | PLUS
   30               | MINUS
   31               | BITWISE_NOT
   32               | LOGICAL_NOT

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULT cast_expression
   37                          | multiplicative_expression DIVIDE cast_expression
   38                          | multiplicative_expression MODULO cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LSHIFT additive_expression
   44                 | shift_expression RSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LT shift_expression
   47                      | relational_expression GT shift_expression
   48                      | relational_expression LEQ shift_expression
   49                      | relational_expression GEQ shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ relational_expression
   52                    | equality_expression NEQ relational_expression

   53 and_expression: equality_expression
   54               | and_expression BITWISE_AND equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression XOR and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression LOGICAL_OR M logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression N '?' M expression N ':' M conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: ASGN
   68                    | MULT_ASGN
   69                    | DIV_ASGN
   70                    | MOD_ASGN
   71                    | ADD_ASGN
   72                    | SUB_ASGN
   73                    | LSHIFT_ASGN
   74                    | RSHIFT_ASGN
   75                    | AND_ASGN
   76                    | XOR_ASGN
   77                    | OR_ASGN

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list_opt ';'

   82 init_declarator_list_opt: init_declarator_list
   83                         | %empty

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   85                       | type_specifier declaration_specifiers_opt
   86                       | type_qualifier declaration_specifiers_opt
   87                       | function_specifier declaration_specifiers_opt

   88 declaration_specifiers_opt: declaration_specifiers
   89                           | %empty

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list ',' init_declarator

   92 init_declarator: declarator
   93                | declarator ASGN initializer

   94 storage_class_specifier: EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | _BOOL
  108               | _COMPLEX
  109               | _IMAGINARY
  110               | enum_specifier
  111               | struct_or_union_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | %empty

  116 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  117                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  118                          | struct_or_union IDENTIFIER

  119 struct_or_union: STRUCT
  120                | UNION

  121 struct_declaration_list: struct_declaration
  122                        | struct_declaration_list struct_declaration

  123 struct_declaration: specifier_qualifier_list ';'
  124                   | specifier_qualifier_list struct_declarator_list ';'

  125 struct_declarator_list: struct_declarator
  126                       | struct_declarator_list ',' struct_declarator

  127 struct_declarator: ':' constant_expression
  128                  | declarator ':' constant_expression
  129                  | declarator

  130 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  131               | ENUM identifier_opt '{' enumerator_list ',' '}'
  132               | ENUM IDENTIFIER

  133 identifier_opt: IDENTIFIER
  134               | %empty

  135 enumerator_list: enumerator
  136                | enumerator_list ',' enumerator

  137 enumerator: IDENTIFIER
  138           | IDENTIFIER ASGN constant_expression

  139 type_qualifier: CONST
  140               | RESTRICT
  141               | VOLATILE

  142 function_specifier: INLINE

  143 declarator: pointer direct_declarator
  144           | direct_declarator

  145 direct_declarator: IDENTIFIER
  146                  | '(' declarator ')'
  147                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  148                  | direct_declarator '[' type_qualifier_list ']'
  149                  | direct_declarator '[' assignment_expression ']'
  150                  | direct_declarator '[' ']'
  151                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  152                  | direct_declarator '[' STATIC assignment_expression ']'
  153                  | direct_declarator '[' type_qualifier_list MULT ']'
  154                  | direct_declarator '[' MULT ']'
  155                  | direct_declarator '(' changetable parameter_type_list ')'
  156                  | direct_declarator '(' identifier_list ')'
  157                  | direct_declarator '(' changetable ')'

  158 type_qualifier_list_opt: type_qualifier_list
  159                        | %empty

  160 pointer: MULT type_qualifier_list_opt
  161        | MULT type_qualifier_list_opt pointer

  162 type_qualifier_list: type_qualifier
  163                    | type_qualifier_list type_qualifier

  164 parameter_type_list: parameter_list
  165                    | parameter_list ',' ELLIPSIS

  166 parameter_list: parameter_declaration
  167               | parameter_list ',' parameter_declaration

  168 parameter_declaration: declaration_specifiers declarator
  169                      | declaration_specifiers

  170 identifier_list: IDENTIFIER
  171                | identifier_list ',' IDENTIFIER

  172 type_name: specifier_qualifier_list

  173 initializer: assignment_expression
  174            | '{' initializer_list '}'
  175            | '{' initializer_list ',' '}'

  176 initializer_list: designation_opt initializer
  177                 | initializer_list ',' designation_opt initializer

  178 designation_opt: designation
  179                | %empty

  180 designation: designator_list ASGN

  181 designator_list: designator
  182                | designator_list designator

  183 designator: '[' constant_expression ']'
  184           | '.' IDENTIFIER

  185 statement: labeled_statement
  186          | compound_statement
  187          | expression_statement
  188          | selection_statement
  189          | iteration_statement
  190          | jump_statement

  191 loop_statement: labeled_statement
  192               | expression_statement
  193               | selection_statement
  194               | iteration_statement
  195               | jump_statement

  196 labeled_statement: IDENTIFIER ':' M statement
  197                  | CASE constant_expression ':' statement
  198                  | DEFAULT ':' statement

  199 compound_statement: '{' X changetable block_item_list_opt '}'

  200 block_item_list: block_item
  201                | block_item_list M block_item

  202 block_item_list_opt: block_item_list
  203                    | %empty

  204 block_item: declaration
  205           | statement

  206 expression_statement: ';'
  207                     | expression ';'

  208 selection_statement: IF '(' expression N ')' M statement N
  209                    | IF '(' expression N ')' M statement N ELSE M statement
  210                    | SWITCH '(' expression ')' statement

  211 iteration_statement: WHILE W '(' X changetable M expression ')' M loop_statement
  212                    | WHILE W '(' X changetable M expression ')' '{' M block_item_list_opt '}'
  213                    | DO D M loop_statement M WHILE '(' expression ')' ';'
  214                    | DO D '{' M block_item_list_opt '}' M WHILE '(' expression ')' ';'
  215                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M loop_statement
  216                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M loop_statement
  217                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M '{' block_item_list_opt '}'
  218                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M '{' block_item_list_opt '}'

  219 jump_statement: GOTO IDENTIFIER ';'
  220               | CONTINUE ';'
  221               | BREAK ';'
  222               | RETURN expression ';'
  223               | RETURN ';'

  224 translation_unit: external_declaration
  225                 | translation_unit external_declaration

  226 external_declaration: function_definition
  227                     | declaration

  228 function_definition: declaration_specifiers declarator declaration_list_opt changetable '{' block_item_list_opt '}'

  229 declaration_list_opt: declaration_list
  230                     | %empty

  231 declaration_list: declaration
  232                 | declaration_list declaration

  233 M: %empty

  234 F: %empty

  235 W: %empty

  236 D: %empty

  237 X: %empty

  238 N: %empty


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 7 10 15 16 26 34 146 155 156 157 208 209 210 211 212 213 214 215 216 217 218
    ')' (41) 7 10 15 16 26 34 146 155 156 157 208 209 210 211 212 213 214 215 216 217 218
    ',' (44) 16 18 79 91 126 131 136 165 167 171 175 177
    '.' (46) 11 184
    ':' (58) 64 127 128 196 197 198
    ';' (59) 81 123 124 206 207 213 214 219 220 221 222 223
    '?' (63) 64
    '[' (91) 9 147 148 149 150 151 152 153 154 183
    ']' (93) 9 147 148 149 150 151 152 153 154 183
    '{' (123) 15 16 116 117 130 131 174 175 199 212 214 217 218 228
    '}' (125) 15 16 116 117 130 131 174 175 199 212 214 217 218 228
    error (256)
    BREAK (258) 221
    RETURN (259) 222 223
    CASE (260) 197
    FOR (261) 215 216 217 218
    WHILE (262) 211 212 213 214
    GOTO (263) 219
    SIZEOF (264) 25 26
    CONTINUE (265) 220
    IF (266) 208 209
    DO (267) 213 214
    SWITCH (268) 210
    ELSE (269) 209
    FLOAT (270) 103
    SHORT (271) 100
    CHAR (272) 99
    _BOOL (273) 107
    _IMAGINARY (274) 109
    _COMPLEX (275) 108
    INT (276) 101
    DOUBLE (277) 104
    LONG (278) 102
    VOID (279) 98
    SIGNED (280) 105
    AUTO (281) 96
    UNSIGNED (282) 106
    ENUM (283) 130 131 132
    UNION (284) 120
    STRUCT (285) 119
    TYPEDEF (286)
    CONST (287) 139
    DEFAULT (288) 198
    STATIC (289) 95 151 152
    REGISTER (290) 97
    RESTRICT (291) 140
    VOLATILE (292) 141
    EXTERN (293) 94
    INLINE (294) 142
    IDENTIFIER <symp> (295) 5 11 12 117 118 132 133 137 138 145 170 171 184 196 219
    INTEGER_CONST <int_val> (296) 2
    CHAR_CONST <char_val> (297) 4
    FLOAT_CONST <float_val> (298) 3
    STRING_LITERAL <char_val> (299)
    PLUS (300) 29 40
    MINUS (301) 30 41
    MULT (302) 28 36 153 154 160 161
    DIVIDE (303) 37
    ARROW (304) 12
    INCREMENT (305) 13 22
    DECREMENT (306) 14 23
    RSHIFT (307) 44
    LSHIFT (308) 43
    LT (309) 46
    GT (310) 47
    LEQ (311) 48
    GEQ (312) 49
    EQ (313) 51
    NEQ (314) 52
    BITWISE_OR (315) 58
    LOGICAL_OR (316) 62
    BITWISE_AND (317) 27 54
    LOGICAL_AND (318) 60
    XOR (319) 56
    BITWISE_NOT (320) 31
    LOGICAL_NOT (321) 32
    ELLIPSIS (322) 165
    MODULO (323) 38
    ASGN (324) 67 93 138 180
    ENUMERATION_CONST (325)
    ADD_ASGN (326) 71
    SUB_ASGN (327) 72
    MULT_ASGN (328) 68
    DIV_ASGN (329) 69
    MOD_ASGN (330) 70
    LSHIFT_ASGN (331) 73
    RSHIFT_ASGN (332) 74
    AND_ASGN (333) 75
    OR_ASGN (334) 77
    XOR_ASGN (335) 76
    "then" (336)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    changetable (94)
        on left: 1
        on right: 155 157 199 211 212 215 216 217 218 228
    constant <expr> (95)
        on left: 2 3 4
        on right: 6
    primary_expression <expr> (96)
        on left: 5 6 7
        on right: 8
    postfix_expression <A> (97)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 9 10 11 12 13 14 21
    argument_expression_list <num_params> (98)
        on left: 17 18
        on right: 18 19
    argument_expression_list_opt <num_params> (99)
        on left: 19 20
        on right: 10
    unary_expression <A> (100)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 66
    unary_operator <unaryOp> (101)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <A> (102)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression <expr> (103)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <expr> (104)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <expr> (105)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <expr> (106)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <expr> (107)
        on left: 50 51 52
        on right: 51 52 53 54
    and_expression <expr> (108)
        on left: 53 54
        on right: 54 55 56
    exclusive_or_expression <expr> (109)
        on left: 55 56
        on right: 56 57 58
    inclusive_or_expression <expr> (110)
        on left: 57 58
        on right: 58 59 60
    logical_and_expression <expr> (111)
        on left: 59 60
        on right: 60 61 62
    logical_or_expression <expr> (112)
        on left: 61 62
        on right: 62 63 64
    conditional_expression <expr> (113)
        on left: 63 64
        on right: 64 65 80
    assignment_expression <expr> (114)
        on left: 65 66
        on right: 17 18 66 78 79 147 149 151 152 173
    assignment_operator (115)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <expr> (116)
        on left: 78 79
        on right: 7 9 64 79 207 208 209 210 211 212 213 214 215 216 217 218 222
    constant_expression (117)
        on left: 80
        on right: 127 128 138 183 197
    declaration (118)
        on left: 81
        on right: 204 215 217 227 231 232
    init_declarator_list_opt (119)
        on left: 82 83
        on right: 81
    declaration_specifiers (120)
        on left: 84 85 86 87
        on right: 81 88 168 169 228
    declaration_specifiers_opt (121)
        on left: 88 89
        on right: 84 85 86 87
    init_declarator_list (122)
        on left: 90 91
        on right: 82 91
    init_declarator <symp> (123)
        on left: 92 93
        on right: 90 91
    storage_class_specifier (124)
        on left: 94 95 96 97
        on right: 84
    type_specifier (125)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 85 112
    specifier_qualifier_list (126)
        on left: 112 113
        on right: 114 123 124 172
    specifier_qualifier_list_opt (127)
        on left: 114 115
        on right: 112 113
    struct_or_union_specifier (128)
        on left: 116 117 118
        on right: 111
    struct_or_union (129)
        on left: 119 120
        on right: 116 117 118
    struct_declaration_list (130)
        on left: 121 122
        on right: 116 117 122
    struct_declaration (131)
        on left: 123 124
        on right: 121 122
    struct_declarator_list (132)
        on left: 125 126
        on right: 124 126
    struct_declarator (133)
        on left: 127 128 129
        on right: 125 126
    enum_specifier (134)
        on left: 130 131 132
        on right: 110
    identifier_opt (135)
        on left: 133 134
        on right: 130 131
    enumerator_list (136)
        on left: 135 136
        on right: 130 131 136
    enumerator (137)
        on left: 137 138
        on right: 135 136
    type_qualifier (138)
        on left: 139 140 141
        on right: 86 113 162 163
    function_specifier (139)
        on left: 142
        on right: 87
    declarator <symp> (140)
        on left: 143 144
        on right: 92 93 128 129 146 168 228
    direct_declarator <symp> (141)
        on left: 145 146 147 148 149 150 151 152 153 154 155 156 157
        on right: 143 144 147 148 149 150 151 152 153 154 155 156 157
    type_qualifier_list_opt (142)
        on left: 158 159
        on right: 160 161
    pointer <sym_type> (143)
        on left: 160 161
        on right: 143 161
    type_qualifier_list (144)
        on left: 162 163
        on right: 147 148 151 153 158 163
    parameter_type_list (145)
        on left: 164 165
        on right: 155
    parameter_list (146)
        on left: 166 167
        on right: 164 165 167
    parameter_declaration (147)
        on left: 168 169
        on right: 166 167
    identifier_list (148)
        on left: 170 171
        on right: 156 171
    type_name (149)
        on left: 172
        on right: 15 16 26 34
    initializer <symp> (150)
        on left: 173 174 175
        on right: 93 176 177
    initializer_list (151)
        on left: 176 177
        on right: 15 16 174 175 177
    designation_opt (152)
        on left: 178 179
        on right: 176 177
    designation (153)
        on left: 180
        on right: 178
    designator_list (154)
        on left: 181 182
        on right: 180 182
    designator (155)
        on left: 183 184
        on right: 181 182
    statement <stat> (156)
        on left: 185 186 187 188 189 190
        on right: 196 197 198 205 208 209 210
    loop_statement <stat> (157)
        on left: 191 192 193 194 195
        on right: 211 213 215 216
    labeled_statement <stat> (158)
        on left: 196 197 198
        on right: 185 191
    compound_statement <stat> (159)
        on left: 199
        on right: 186
    block_item_list <stat> (160)
        on left: 200 201
        on right: 201 202
    block_item_list_opt <stat> (161)
        on left: 202 203
        on right: 199 212 214 217 218 228
    block_item <stat> (162)
        on left: 204 205
        on right: 200 201
    expression_statement <expr> (163)
        on left: 206 207
        on right: 187 192 215 216 217 218
    selection_statement <stat> (164)
        on left: 208 209 210
        on right: 188 193
    iteration_statement <stat> (165)
        on left: 211 212 213 214 215 216 217 218
        on right: 189 194
    jump_statement <stat> (166)
        on left: 219 220 221 222 223
        on right: 190 195
    translation_unit (167)
        on left: 224 225
        on right: 0 225
    external_declaration (168)
        on left: 226 227
        on right: 224 225
    function_definition (169)
        on left: 228
        on right: 226
    declaration_list_opt (170)
        on left: 229 230
        on right: 228
    declaration_list (171)
        on left: 231 232
        on right: 229 232
    M <instr_number> (172)
        on left: 233
        on right: 60 62 64 196 201 208 209 211 212 213 214 215 216 217 218
    F (173)
        on left: 234
        on right: 215 216 217 218
    W (174)
        on left: 235
        on right: 211 212
    D (175)
        on left: 236
        on right: 213 214
    X (176)
        on left: 237
        on right: 199 211 212 215 216 217 218
    N <stat> (177)
        on left: 238
        on right: 64 208 209 215 216 217 218


State 0

    0 $accept: . translation_unit $end

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

  103 type_specifier: FLOAT .

    $default  reduce using rule 103 (type_specifier)


State 2

  100 type_specifier: SHORT .

    $default  reduce using rule 100 (type_specifier)


State 3

   99 type_specifier: CHAR .

    $default  reduce using rule 99 (type_specifier)


State 4

  107 type_specifier: _BOOL .

    $default  reduce using rule 107 (type_specifier)


State 5

  109 type_specifier: _IMAGINARY .

    $default  reduce using rule 109 (type_specifier)


State 6

  108 type_specifier: _COMPLEX .

    $default  reduce using rule 108 (type_specifier)


State 7

  101 type_specifier: INT .

    $default  reduce using rule 101 (type_specifier)


State 8

  104 type_specifier: DOUBLE .

    $default  reduce using rule 104 (type_specifier)


State 9

  102 type_specifier: LONG .

    $default  reduce using rule 102 (type_specifier)


State 10

   98 type_specifier: VOID .

    $default  reduce using rule 98 (type_specifier)


State 11

  105 type_specifier: SIGNED .

    $default  reduce using rule 105 (type_specifier)


State 12

   96 storage_class_specifier: AUTO .

    $default  reduce using rule 96 (storage_class_specifier)


State 13

  106 type_specifier: UNSIGNED .

    $default  reduce using rule 106 (type_specifier)


State 14

  130 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  131               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  132               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 134 (identifier_opt)

    identifier_opt  go to state 37


State 15

  120 struct_or_union: UNION .

    $default  reduce using rule 120 (struct_or_union)


State 16

  119 struct_or_union: STRUCT .

    $default  reduce using rule 119 (struct_or_union)


State 17

  139 type_qualifier: CONST .

    $default  reduce using rule 139 (type_qualifier)


State 18

   95 storage_class_specifier: STATIC .

    $default  reduce using rule 95 (storage_class_specifier)


State 19

   97 storage_class_specifier: REGISTER .

    $default  reduce using rule 97 (storage_class_specifier)


State 20

  140 type_qualifier: RESTRICT .

    $default  reduce using rule 140 (type_qualifier)


State 21

  141 type_qualifier: VOLATILE .

    $default  reduce using rule 141 (type_qualifier)


State 22

   94 storage_class_specifier: EXTERN .

    $default  reduce using rule 94 (storage_class_specifier)


State 23

  142 function_specifier: INLINE .

    $default  reduce using rule 142 (function_specifier)


State 24

  227 external_declaration: declaration .

    $default  reduce using rule 227 (external_declaration)


State 25

   81 declaration: declaration_specifiers . init_declarator_list_opt ';'
  228 function_definition: declaration_specifiers . declarator declaration_list_opt changetable '{' block_item_list_opt '}'

    IDENTIFIER  shift, and go to state 38
    MULT        shift, and go to state 39
    '('         shift, and go to state 40

    $default  reduce using rule 83 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 41
    init_declarator_list      go to state 42
    init_declarator           go to state 43
    declarator                go to state 44
    direct_declarator         go to state 45
    pointer                   go to state 46


State 26

   84 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 27

   85 declaration_specifiers: type_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 49
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 28

  111 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 111 (type_specifier)


State 29

  116 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  117                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  118                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  110 type_specifier: enum_specifier .

    $default  reduce using rule 110 (type_specifier)


State 31

   86 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 52
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 32

   87 declaration_specifiers: function_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 53
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 33

    0 $accept: translation_unit . $end
  225 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 54
    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    external_declaration       go to state 55
    function_definition        go to state 35


State 34

  224 translation_unit: external_declaration .

    $default  reduce using rule 224 (translation_unit)


State 35

  226 external_declaration: function_definition .

    $default  reduce using rule 226 (external_declaration)


State 36

  132 enum_specifier: ENUM IDENTIFIER .
  133 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 133 (identifier_opt)
    $default  reduce using rule 132 (enum_specifier)


State 37

  130 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  131               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 56


State 38

  145 direct_declarator: IDENTIFIER .

    $default  reduce using rule 145 (direct_declarator)


State 39

  160 pointer: MULT . type_qualifier_list_opt
  161        | MULT . type_qualifier_list_opt pointer

    CONST     shift, and go to state 17
    RESTRICT  shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 159 (type_qualifier_list_opt)

    type_qualifier           go to state 57
    type_qualifier_list_opt  go to state 58
    type_qualifier_list      go to state 59


State 40

  146 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 38
    MULT        shift, and go to state 39
    '('         shift, and go to state 40

    declarator         go to state 60
    direct_declarator  go to state 45
    pointer            go to state 46


State 41

   81 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 61


State 42

   82 init_declarator_list_opt: init_declarator_list .
   91 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 62

    $default  reduce using rule 82 (init_declarator_list_opt)


State 43

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


State 44

   92 init_declarator: declarator .
   93                | declarator . ASGN initializer
  228 function_definition: declaration_specifiers declarator . declaration_list_opt changetable '{' block_item_list_opt '}'
